--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="home" class="home">
         <div class="home-content">
-            <h1>Hi It's<span>Abdourahmane</span></h1>
+            <h1>Hi It's<span>Abdulrahman</span></h1>
             <h3>
                 I'm a <span>Web Developer</span>
             </h3>
@@ -56,7 +56,7 @@
                   </div>
 
                   <div class="btn-group">
-                    <a href="#" class="btn">Here</a>
+                    <a href="#" class="btn">Hire</a>
                     <a href="#contact" 
                     class="btn">Contact</a>
                   </div>
