--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <h3>
                 I'm a <span>Web Developer</span>
             </h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia consequuntur temporibus
-                 nostrum cumque rem quo doloribus fugit aperiam! Aspernatur omnis veniam eaque, nihil
-                  nemo quis! Odit id culpa esse cumque?</p>
+            <p>My Name Is Abdourahmane Niane. I Attended Primary School For Three Years In Guinea And Attended Congress High School As A Senior In Sierra Leone.
+                 I Am Currently Enrolled In The Pathways To Graduation Program To Get My GED Equivalency.
+                 I Also Attend The All Star Summer Intensive Program In New York City. As A Result Of These Programs,
+                 I Have A Basic Knowledge Of Computer Engineering, Computer Science, And Coding.</p>
                   <div class="social-icons">
                     <a href="https://github.com/abd950/Rusume_Website">
                         <i class="bx bxl-github"></i>
@@ -75,10 +76,12 @@
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Fuga quae est qui perferendis corporis iste laudantium quas
-              doloremque molestias delectus, rem quod dolorem autem repudiandae?
-               Asperiores commodi eius optio tempore!</p>
+            <p>I Like Waking Up In The Morning Meeting Breakfast. I Like yoghurt With Bread. I Like Listening To Justin Bieber When I Walk In The Street.
+                 I Like Series Like The Merlin & Prison Break. I Like Burgers & Chips. I Like The Smell Of Grass In The Morning.
+                  I Like Sneakers & Football T Shirts. I Like Movies Like John Wick & The Equalizer. I Like Road Trips & Solo Dates.
+                   I Love Mountains & Waterfalls. I Think Cartoons Are Deeper Than Real Life.
+                 I Think Weed & Alcohol Is Corrupted. I Feel Love Is Misunderstood. I Know God Exists.
+                 I Always Have Adam Lewis & Drake In My Playlist!</p>
                <a href="#" class="btn">Read More</a>
         </div>
 
